--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "portfolio-next",
+  "name": "portfolio-dalio",
   "version": "0.1.0",
   "private": true,
+  "author": "Dalio Shindi Yamada",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
